--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Official Airstack Frames SDK",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage --passWithNoTests",
     "generate": "npx graphql-codegen"
   },
   "repository": {
@@ -23,8 +23,11 @@
     "@graphql-codegen/typescript": "^4.0.4",
     "@graphql-codegen/typescript-operations": "^4.1.2",
     "@parcel/watcher": "^2.4.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "dotenv": "^16.4.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
