--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "airstack-frames-sdk",
+  "name": "@airstack/frames",
   "version": "1.0.0",
   "description": "Official Airstack Frames SDK",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "typings": "src/types.ts",
   "scripts": {
     "test": "jest --coverage --passWithNoTests",
     "generate": "npx graphql-codegen"
@@ -12,7 +13,9 @@
     "url": "git+https://github.com/Airstack-xyz/airstack-frames-sdk.git"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Yoseph Kurnia Soenggoro"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Airstack-xyz/airstack-frames-sdk/issues"
