--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airstack/frames",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Official Airstack Frames SDK",
   "main": "dist/cjs/index.js",
   "typings": "dist/types/index.d.ts",
@@ -13,6 +13,9 @@
     "ts-lint": "tsc --noEmit --incremental",
     "prepare": "rm -rf dist & tsc -p tsconfig.esm.json & tsc -p tsconfig.cjs.json"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Airstack-xyz/airstack-frames-sdk.git"
