--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@parcel/watcher": "^2.4.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
+    "@types/node-fetch": "^2.6.11",
     "dotenv": "^16.4.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
@@ -43,6 +44,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@airstack/node": "^0.0.5"
+    "@airstack/node": "^0.0.5",
+    "node-fetch": "^2.6.6"
   }
 }
