--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airstack/frames",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "Official Airstack Frames SDK",
   "main": "dist/cjs/index.js",
   "typings": "dist/types/index.d.ts",
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/Airstack-xyz/airstack-frames-sdk#readme",
   "devDependencies": {
+    "@farcaster/fishery": "^2.2.3",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript": "^4.0.4",
     "@graphql-codegen/typescript-operations": "^4.1.2",
@@ -39,12 +40,14 @@
     "@types/node-fetch": "^2.6.11",
     "dotenv": "^16.4.1",
     "jest": "^29.7.0",
+    "protobufjs": "^7.2.6",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@airstack/node": "^0.0.5",
+    "@farcaster/core": "^0.14.5",
     "node-fetch": "^2.6.6"
   }
 }
