--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airstack/frames",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Official Airstack Frames SDK",
   "main": "dist/cjs/index.js",
   "typings": "dist/types/index.d.ts",
@@ -11,7 +11,8 @@
     "build": "rm -rf dist & tsc -p tsconfig.esm.json & npm run ts-lint & tsc -p tsconfig.cjs.json",
     "lint": "eslint src/**/*.ts",
     "ts-lint": "tsc --noEmit --incremental",
-    "prepare": "rm -rf dist & tsc -p tsconfig.esm.json & tsc -p tsconfig.cjs.json"
+    "prepare": "rm -rf dist & tsc -p tsconfig.esm.json & tsc -p tsconfig.cjs.json",
+    "protobufs:generate": "buf generate schemas"
   },
   "files": [
     "dist"
@@ -47,7 +48,13 @@
   },
   "dependencies": {
     "@airstack/node": "^0.0.5",
+    "@bufbuild/buf": "^1.30.0",
+    "@bufbuild/protobuf": "^1.8.0",
+    "@bufbuild/protoc-gen-es": "^1.8.0",
     "@farcaster/core": "^0.14.5",
-    "node-fetch": "^2.6.6"
+    "buf": "^0.1.1",
+    "hono": "^4.1.0",
+    "node-fetch": "^2.6.6",
+    "viem": "^2.8.9"
   }
 }
