--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airstack/frames",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "Official Airstack Frames SDK",
   "main": "dist/cjs/index.js",
   "typings": "dist/types/index.d.ts",
@@ -8,10 +8,11 @@
   "scripts": {
     "test": "jest --coverage --passWithNoTests",
     "generate": "npx graphql-codegen",
-    "build": "rm -rf dist & tsc -p tsconfig.esm.json & npm run ts-lint & tsc -p tsconfig.cjs.json",
+    "build": "rm -rf dist & tsc -p tsconfig.esm.json & npm run ts-lint & tsc -p tsconfig.cjs.json & npm run copy:fonts",
     "lint": "eslint src/**/*.ts",
     "ts-lint": "tsc --noEmit --incremental",
-    "prepare": "rm -rf dist & tsc -p tsconfig.esm.json & tsc -p tsconfig.cjs.json"
+    "prepare": "rm -rf dist & tsc -p tsconfig.esm.json & tsc -p tsconfig.cjs.json",
+    "copy:fonts": "npx ncp ./src/fonts/ ./dist/fonts/"
   },
   "files": [
     "dist"
@@ -38,6 +39,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "@types/node-fetch": "^2.6.11",
+    "@types/sha256": "^0.2.2",
+    "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.1",
     "jest": "^29.7.0",
     "protobufjs": "^7.2.6",
@@ -51,9 +54,14 @@
     "@bufbuild/protobuf": "^1.8.0",
     "@bufbuild/protoc-gen-es": "^1.8.0",
     "@farcaster/core": "^0.14.5",
+    "@resvg/resvg-js": "^2.6.0",
     "buf": "^0.1.1",
     "hono": "^4.1.0",
     "node-fetch": "^2.6.6",
+    "satori": "^0.10.13",
+    "sha256": "^0.2.0",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1",
     "viem": "^2.8.9"
   }
 }
