--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airstack/frames",
-  "version": "1.0.20",
+  "version": "1.1.0",
   "description": "Official Airstack Frames SDK",
   "main": "dist/cjs/index.js",
   "typings": "dist/types/index.d.ts",
@@ -8,11 +8,16 @@
   "scripts": {
     "test": "jest --coverage --passWithNoTests",
     "generate": "npx graphql-codegen",
-    "build": "rm -rf dist & tsc -p tsconfig.esm.json & npm run ts-lint & tsc -p tsconfig.cjs.json & npm run copy:fonts",
+    "build": "npm run build:next && npm run build:sdk",
+    "build:sdk": "rm -rf dist & tsc -p tsconfig.esm.json & npm run ts-lint & tsc -p tsconfig.cjs.json",
     "lint": "eslint src/**/*.ts",
     "ts-lint": "tsc --noEmit --incremental",
     "prepare": "rm -rf dist & tsc -p tsconfig.esm.json & tsc -p tsconfig.cjs.json",
-    "copy:fonts": "npx ncp ./src/fonts/ ./dist/fonts/"
+    "dev": "next dev",
+    "build:next": "next build",
+    "start": "next start",
+    "deploy:preview": "vercel",
+    "deploy:prod": "vercel --prod"
   },
   "files": [
     "dist"
@@ -21,7 +26,16 @@
     "type": "git",
     "url": "git+https://github.com/Airstack-xyz/airstack-frames-sdk.git"
   },
-  "keywords": [],
+  "keywords": [
+    "airstack",
+    "frames",
+    "farcaster",
+    "web3",
+    "onchain",
+    "data",
+    "api",
+    "ethereum"
+  ],
   "author": {
     "name": "Yoseph Kurnia Soenggoro"
   },
@@ -39,14 +53,18 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "@types/node-fetch": "^2.6.11",
+    "@types/react": "^18.2.73",
     "@types/sha256": "^0.2.2",
     "@types/uuid": "^9.0.8",
+    "@vercel/node": "^3.0.26",
     "dotenv": "^16.4.1",
     "jest": "^29.7.0",
+    "next": "^14.1.4",
     "protobufjs": "^7.2.6",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vercel": "^33.6.3"
   },
   "dependencies": {
     "@airstack/node": "^0.0.5",
@@ -55,13 +73,19 @@
     "@bufbuild/protoc-gen-es": "^1.8.0",
     "@farcaster/core": "^0.14.5",
     "@resvg/resvg-js": "^2.6.0",
+    "@vercel/og": "^0.6.2",
     "buf": "^0.1.1",
+    "graphql-request": "^6.1.0",
     "hono": "^4.1.0",
     "node-fetch": "^2.6.6",
+    "react": "^18.2.0",
     "satori": "^0.10.13",
     "sha256": "^0.2.0",
     "sharp": "^0.32.6",
     "uuid": "^9.0.1",
     "viem": "^2.8.9"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
